# grep2

./: Makefile  README.md  pyproject.toml
files/address/: 09.txt
src/grep2/: __init__.py  grep2.py
tests/: test_address.py  test_grep2.py
