[project]
name = "gprep2"
version = "0.0.1"
authors = [
    { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "Unix grep command for software 2.0"
dependencies = [
    "gpts",
]

[project.optional-dependencies]
develop = [
    "build",
    "pytest",
]

[project.urls]
source = "https://github.com/notarealdeveloper/grep2"
download = "https://pypi.org/project/grep2/#files"
